removed page counter in #about, changed trigger for first #about animation

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <br>&mdash; but they both share one major weakness:</p>
                         <div class="about-navigation">
                             <img id="prev" src="img/desktop-arrow-up.png" />
-                            <span>2/5</span>
+                            <span>  </span>
                             <img id="next" src="img/desktop-arrow-down.png" />
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <br>the prevention of it, out of a place of isolation.</p>
                         <div class="about-navigation">
                             <img id="prev" src="img/desktop-arrow-up.png" />
-                            <span>3/5</span>
+                            <span>  </span>
                             <img id="next" src="img/desktop-arrow-down.png" />
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                             <br> we can all get behind. (Or in front of, depending.)</p>
                         <div class="about-navigation">
                             <img id="prev" src="img/desktop-arrow-up.png" />
-                            <span>4/5</span>
+                            <span>  </span>
                             <img id="next" src="img/desktop-arrow-down.png" />
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div style="display:none" class="about-navigation">
                     <img id="prev" src="img/desktop-arrow-up.png" />
-                    <span>5/5</span>
+                    <span>  </span>
                 </div>
             </div>
         </section>
@@ -350,7 +350,7 @@
                     <div class="row store-info">
                         <div class="col-sm-8">
                             <h4>The Cancer Sutra eBook</h4>
-                            <h3>$9.99</h3></div>
+                            <h3>$9</h3></div>
                             <a href="#/support/ebook" class="cta">Buy</a>
                     </div>
                 </div>
@@ -370,15 +370,15 @@
         </section>
         <section id="ebook">
         	<div class="row">
-	        	<div class="col-md-4">
+	        	<div class="col-sm-4 ebook-screenshots">
 	        		<img src="img/support/ebook-1.jpg"/><br><br>
 	        		<img src="img/support/ebook-2.jpg"/><br><br>
 	        		<img src="img/support/ebook-3.jpg"/><br><br>
 	        	</div>
-	        	<div class="col-md-4 ebook-detail">
+	        	<div class="col-sm-4 ebook-detail">
 	        		<div class="ebook-detail-sticky">
 		        	<h2>The Cancer Sutra eBook</h2>
-		        	<span class="ebook-price">$9</span>
+		        	<h3>$9</h3>
 		        	<p>Donate now and get all 31 positions featured online, plus 1 bonus position, on your reading device of choice (supported on Kindle, iBooks®, and NOOK®).</p>
 		        	<a href><img src="img/support/ibooks-button.png"/></a><br><br>
 		        	<a href><img src="img/support/kindle-button.png"/></a><br><br>
