add updated docs, og:tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html class="no-js">
 <head>
     <title>The Cancer Sutra</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <meta property="og:title" content="The Cancer Sutra"/>
+    <meta property="og:url" content="http://qa.cancersutra.com"/>
+    <meta property="og:site_name" content="The Cancer Sutra"/>
+
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
     <link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></style>
