--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>The Cancer Sutra</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <meta property="og:title" content="The Cancer Sutra"/>
-    <meta property="og:url" content="http://qa.cancersutra.com"/>
+    <meta property="og:url" content="http://qa.cancersutra.com:8080"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
