add dummy description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
+    <meta property="og:description" content="This is the description."/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
