--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="http://qa.cancersutra.com:8080"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
     <meta property="og:description" content="This is the description."/>
-    <meta property="og:image" content="img/social/banners/CS_Social_CatOrMattScan.png"/>
+    <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_CatOrMattScan.png"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
