added dummy description and image for demo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
-    <meta property="og:description" content="This is the description."/>
+    <meta property="og:description" content="The Cancer Sutra is designed to challenge the taboos and conventions about cancer. Firstly by talking about how to look for cancer, not just find it. Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation."/>
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_CatOrMattScan.png"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
