--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
                     </g>
                 </svg>
             </a>
-            <h1><a href="#/positions">The Cancer Sutra</a></h1>
+            <h1><a href="#!/positions">The Cancer Sutra</a></h1>
         </div>
     </div>
     <div class="wrapper">
         <nav class="row">
             <ul class="navigation">
                 <li class="double-underline"><a class="nav-about" href="#">About</a></li>
-                <li><a class="nav-positions" href="#/positions">All Positions</a></li>
+                <li><a class="nav-positions" href="#!/positions">All Positions</a></li>
             </ul>
             <div class="filters">
                 <div data-filter-type="cancer-type" class="filter cancer-type">
                     <h3>Filter by Cancer Type</h3>
                     <ul class="uppercase">
-                        <li><a href="#/chapters/skin" data-filter-type="cancer-type" data-filter="skin" data-toggle="off">Skin</a></li>
-                        <li><a href="#/chapters/breast" data-filter-type="cancer-type" data-filter="breast" data-toggle="off">Breast</a></li>
-                        <li><a href="#/chapters/testicular" data-filter-type="cancer-type" data-filter="testicular" data-toggle="off">Testicular</a></li>
-                        <li class="double-underline"><a href="#/chapters/prostate" data-filter-type="cancer-type" data-filter="prostate" data-toggle="off">Prostate</a></li>
+                        <li><a href="#!/chapters/skin" data-filter-type="cancer-type" data-filter="skin" data-toggle="off">Skin</a></li>
+                        <li><a href="#!/chapters/breast" data-filter-type="cancer-type" data-filter="breast" data-toggle="off">Breast</a></li>
+                        <li><a href="#!/chapters/testicular" data-filter-type="cancer-type" data-filter="testicular" data-toggle="off">Testicular</a></li>
+                        <li class="double-underline"><a href="#!/chapters/prostate" data-filter-type="cancer-type" data-filter="prostate" data-toggle="off">Prostate</a></li>
                     </ul>
                 </div>
             </div>
             <ul class="navigation">
-                <li><a class="nav-support" href="#/support">Support the Cause</a></li>
+                <li><a class="nav-support" href="#!/support">Support the Cause</a></li>
             </ul>
         </nav>
         <div class="loader">
@@ -146,7 +146,7 @@
 								Let’s get to the real<br>
 								<em>thrust</em> of the matter.</h2>
                             <br>
-                            <a class="hvr-hang cs-button btn" href="#/positions">ONWARD &amp; UNDERWARD</a>
+                            <a class="hvr-hang cs-button btn" href="#!/positions">ONWARD &amp; UNDERWARD</a>
                         </div>
                     </div>
                 </div>
@@ -316,7 +316,7 @@
             <div id="positions" class="empty">
             </div>
             <div id="support-blurb">
-                <p>Little peeping Tom, why don’t you join the fun? Visit our <a href="#/support">Support Page</a> to see how you can help stick it to cancer, hard!</p>
+                <p>Little peeping Tom, why don’t you join the fun? Visit our <a href="#!/support">Support Page</a> to see how you can help stick it to cancer, hard!</p>
                 <small>Support for The Cancer Sutra goes toward helping raise awareness, funding research, and spreading the message about how early detection can help save lives.</small>
             </div>
             <!--SUPPORT THE CAUSE CTAs-->
@@ -325,25 +325,25 @@
                     <h4>Not Titillated Yet?</h4>
                     <p>Visit our Support Page to help put the squeeze on cancer.</p>
                     <br>
-                    <a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
+                    <a class="cs-button btn hvr-bob" href="#!/support">Support the Cause</a>
                 </div>
                 <div data-cancer-type="testicular">
                     <h4>Now, now &mdash; don’t leave us hanging.</h4>
                     <p>Lend us a hand on our Support Page to help spread the word about early detection.</p>
                     <br>
-                    <a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
+                    <a class="cs-button btn hvr-bob" href="#!/support">Support the Cause</a>
                 </div>
                 <div data-cancer-type="skin">
                     <h4>Now that we’ve bared it all...</h4>
                     <p>Visit our Support Page to help make early detection top (or bottom) of mind.</p>
                     <br>
-                    <a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
+                    <a class="cs-button btn hvr-bob" href="#!/support">Support the Cause</a>
                 </div>
                 <div data-cancer-type="prostate">
                     <h4>Shameless plug here...</h4>
                     <p>Visit our support page to see how you can help give cancer the finger!</p>
                     <br>
-                    <a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
+                    <a class="cs-button btn hvr-bob" href="#!/support">Support the Cause</a>
                 </div>
             </div>
         </section>
@@ -360,7 +360,7 @@
                         <div class="col-sm-8">
                             <h4>The Cancer Sutra eBook</h4>
                             <h3>$9</h3></div>
-                            <a href="#/support/ebook" class="cta">Buy</a>
+                            <a href="#!/support/ebook" class="cta">Buy</a>
                     </div>
                 </div>
                 </div>
@@ -400,7 +400,7 @@
     <footer class="center">
     	<p>A proud supporter of<br><br></p>
     	<p><a href="http://stupidcancer.org"><img src="img/stupidcancer.png"/></a><br><br></p>
-    	<p class="footer-links"><a href="#/about">ABOUT </a> | <a href="#/positions"> ALL POSITIONS </a> | <a href="#/support"> SUPPORT THE CAUSE </a> | <a> CONTACT </a></p>
+    	<p class="footer-links"><a href="#!/about">ABOUT </a> | <a href="#!/positions"> ALL POSITIONS </a> | <a href="#!/support"> SUPPORT THE CAUSE </a> | <a> CONTACT </a></p>
     	<p>Copyright © 2015 The Cancer Sutra.  All rights reserved.<br><br></p>
     	<p>The information contained within The Cancer Sutra project is not intended or implied to be substituted for professional medical advice. It is provided to supplement both self-checks and regular visits to a medical professional. Please, check yourself regularly, check your partner (as many times a night as you can manage, preferably), and always, always seek the advice of a physician.</p>
     </footer>
@@ -428,7 +428,7 @@
                             </div>
                             <div class="detail-social">
                                 <a href><img src="img/social/icons/email.png" /></a>
-                                <a href><img src="img/social/icons/facebook.png" /></a>
+                                <a class="fb-share-button" data-href="http://qa.cancersutra.com:8080/positions/{{element-name}}" data-layout="icon"><img src="img/social/icons/facebook.png" /></a>
                                 <a href><img src="img/social/icons/twitter.png" /></a>
                                 <a href><img src="img/social/icons/tumblr.png" /></a>
                             </div>
@@ -439,6 +439,15 @@
             {{/positions}}
         </script>
     </div>
+    <!-- FB SHARE -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=122641351115268";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <script src="js/assets/routie.min.js"></script>
     <!-- jQuery 2 For Modern Browsers -->
     <!--[if !IE]><!-->
