testing nginx rewrite for FB

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             </div>
                             <div class="detail-social">
                                 <a href><img src="img/social/icons/email.png" /></a>
-                                <a class="fb-share-button" data-href="http://qa.cancersutra.com:8080/positions/{{element-name}}" data-layout="icon"><img src="img/social/icons/facebook.png" /></a>
+                                <a href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
                                 <a href><img src="img/social/icons/twitter.png" /></a>
                                 <a href><img src="img/social/icons/tumblr.png" /></a>
                             </div>
@@ -439,15 +439,6 @@
             {{/positions}}
         </script>
     </div>
-    <!-- FB SHARE -->
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=122641351115268";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
     <script src="js/assets/routie.min.js"></script>
     <!-- jQuery 2 For Modern Browsers -->
     <!--[if !IE]><!-->
