canonical / OG url test

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             <div class="detail-social">
                                 <a href><img src="img/social/icons/email.png" /></a>
                                 <a href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
-                                <a href><img src="img/social/icons/twitter.png" /></a>
+                                <a href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}"><img src="img/social/icons/twitter.png" /></a>
                                 <a href><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
