add twitter card meta

--- a/social/template.html
+++ b/social/template.html
@@ -10,6 +10,8 @@
 
     <link rel="canonical" href="http://qa.cancersutra.com:8080/positions/{{element-name}}" />
 
+    <meta name="twitter:card" content="summary" />
+    
     <meta property="og:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
