--- a/social/template.html
+++ b/social/template.html
@@ -10,8 +10,11 @@
 
     <link rel="canonical" href="http://qa.cancersutra.com:8080/positions/{{element-name}}" />
 
-    <meta name="twitter:card" content="summary" />
-    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra">
+    <meta name="twitter:description" content="{{og:description}}">
+    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}">
+
     <meta property="og:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
