template update to content for crawlers

--- a/social/template.html
+++ b/social/template.html
@@ -22,7 +22,9 @@
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
 </head>
 <body>
+    <h1>The Cancer Sutra</h1>
 	<h1>{{display-name}}</h1>
+    <p>{{og:description}}</p>
 	<img style="width:100%;height:auto" src="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
 </body>
 </html>
