add twitter:site @name for @cancersutra (testing)

--- a/social/template.html
+++ b/social/template.html
@@ -14,6 +14,7 @@
     <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra">
     <meta name="twitter:description" content="{{og:description}}">
     <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}">
+    <meta name="twitter:site" content="@CancerSutra">
 
     <meta property="og:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
