--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:title" content="The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
-    <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/> <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_CatOrMattScan.png"/>
+    <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
+    <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
