sag and layout tweaks, test tweaks, updated social images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="The Cancer Sutra">
+    <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?">
+    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png">
+    <meta name="twitter:site" content="@CancerSutra">
+
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
     <link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></style>
@@ -96,7 +102,7 @@
                     <div class="col-about-copy col-sm-6">
                         <h2><em>Before the what, the why.</em></h2>
                         <p>Because fear of cancer can be as bad as cancer itself.
-                            <br> Because the earlier you detect cancer, the greater the chances of treating it successfully.
+                            <br> Because the earlier you detect cancer, the greater the chances <br> of treating it successfully.
                             <br> Because fear, like cancer, may have the power to spread
                             <br>&mdash; but they both share one major weakness:</p>
                         <div class="about-navigation">
@@ -127,7 +133,7 @@
             <div id="four" class="four row">
                 <div class="copy">
                     <div class="col-about-copy col-sm-6">
-                        <h2>After all, saving lives<br>is <em>one thing.</em></h2>
+                        <h2>After all, saving lives <br>is <em>one thing.</em></h2>
                         <p>Having fun while doing it &mdash; well, that’s something
                             <br> we can all get behind. (Or in front of, depending.)</p>
                         <div class="about-navigation">
@@ -348,23 +354,23 @@
             </div>
         </section>
         <section id="support">
-            <h2><em>You’ve got to give some to get some.</em></h2>
-            <p class="support-text">Thank you for your interest in helping give cancer the bird (and giving your lover something quite a deal more pleasurable). Note that 100% of net proceeds from sales of both ebook and poster options go to Stupid Cancer®, to help anyone affected by young adult cancer to Get Busy Living by building community, improving quality of life, and providing meaningful survivorship.</p>
+            <h2>You’ve got to give some to get some.</h2>
+            <p>Thank you for your interest in helping give cancer the bird (and giving your lover something quite a deal more pleasurable). Note that 100% of net proceeds from sales of both ebook and poster options go to Stupid Cancer®, to help anyone affected by young adult cancer to Get Busy Living by building community, improving quality of life, and providing meaningful survivorship.</p>
             <br>
             <br>
             <div class="row">
-                <div class="col-md-4 store-item">
+                <div class="col-md-4 store-item store-item-ebook">
                 	<div class="store-item-wrapper">
                     <img class="img-responsive" src="img/support/ebook.jpg">
                     <div class="row store-info">
                         <div class="col-sm-8">
                             <h4>The Cancer Sutra eBook</h4>
-                            <h3>$9</h3></div>
+                            <h3>$9.99</h3></div>
                             <a href="#!/support/ebook" class="cta">Buy</a>
                     </div>
                 </div>
                 </div>
-                <div class="col-md-8 store-item">
+                <div class="col-md-8 store-item store-item-posters">
                 	<div class="store-item-wrapper">
                     <img class="img-responsive" src="img/support/Posters_ALL_NEW.jpg">
                     <div class="row store-info">
@@ -427,10 +433,10 @@
                                     <br>*{{{just-the-tip}}}</p>
                             </div>
                             <div class="detail-social">
-                                <a href><img src="img/social/icons/email.png" /></a>
-                                <a href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
-                                <a href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
-                                <a href><img src="img/social/icons/tumblr.png" /></a>
+                                <a target="_blank" href><img src="img/social/icons/email.png" /></a>
+                                <a target="_blank" href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
+                                <a target="_blank" href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
+                                <a target="_blank" href><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
                     </div>
