--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <div id="templates">
         <script type="template" class="positions">
             {{#positions}}
-            <div data-index="{{overview-index}}" data-chapter-index="{{chapter-index}}" data-position="{{element-name}}" data-cancer-type="{{cancer-type}}" {{#chapter-float}}data-chapter-float="{{chapter-float}}"{{/chapter-float}} class="position-{{orientation}} {{#full-size}}position-full-size{{/full-size}} {{#float}}position-float-{{float}}{{/float}}">
+            <div data-index="{{overview-index}}" data-chapter-index="{{chapter-index}}" data-position="{{element-name}}" data-cancer-type="{{cancer-type}}" {{#chapter-float}}data-chapter-float="{{chapter-float}}"{{/chapter-float}} {{#chapter-full-size}}data-chapter-full-size="{{chapter-full-size}}"{{/chapter-full-size}} class="position-{{orientation}} {{#full-size}}position-full-size{{/full-size}} {{#float}}position-float-{{float}}{{/float}}">
                 <img alt="" src="img/positions/svg/{{svg-name}}">
                 <div class="hover-title">{{display-name}}<small>{{display-cancer-type}}</small></div>
                 <div data-position="{{element-name}}" class="detail detail-image-{{orientation}}">
