--- a/index.html
+++ b/index.html
@@ -359,28 +359,54 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-md-4 store-item store-item-ebook">
+                <div class="col-sm-4 store-item store-item-ebook">
                 	<div class="store-item-wrapper">
                     <img class="img-responsive" src="img/support/ebook.jpg">
                     <div class="row store-info">
-                        <div class="col-sm-8">
-                            <h4>The Cancer Sutra eBook</h4>
-                            <h3>$9.99</h3></div>
-                            <a href="#!/support/ebook" class="cta">Buy</a>
+                        <div class="col-sm-12">
+                            <span class="store-item-name">The Cancer Sutra eBook</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="store-item-price">$9.99</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="store-item-cta">BUY</span>
+                        </div>
                     </div>
                 </div>
                 </div>
-                <div class="col-md-8 store-item store-item-posters">
+                <!--<div class="col-sm-8 store-item store-item-posters">
                 	<div class="store-item-wrapper">
                     <img class="img-responsive" src="img/support/Posters_ALL_NEW.jpg">
-                    <div class="row store-info">
-                        <div class="col-sm-8">
-                            <h4>The Cancer Sutra Art Prints</h4>
-                            <h3>$25–12</h3>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <span class="store-item-name">The Cancer Sutra Art Prints</span>
                         </div>
-                        <a class="cta"><small>Available on stupidcancer.org</small><br><p>Visit Store &gt;&gt;</p></a>
+                        <div class="col-sm-6">
+                            <span class="store-item-price">$12–25</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="store-item-available">Available on stupidcancer.org</span>
+                            <span class="store-item-cta">Visit Store &gt;&gt;</span>
+                        </div>
                     </div>
-                   </div>
+                </div>-->
+                <!--<div class="col-sm-8 store-item store-item-posters">
+                    <div class="store-item-wrapper">
+                    <img class="img-responsive" src="img/support/Posters_ALL_NEW.jpg">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <span class="store-item-name">The Cancer Sutra Art Prints</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="store-item-price">$12–25</span>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="store-item-available">Available on stupidcancer.org</span>
+                            <span class="store-item-cta">Visit Store &gt;&gt;</span>
+                        </div>
+                    </div>
+                </div>-->
             </div>
         </section>
         <section id="ebook">
