twitter cards QA

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <meta property="og:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="The Cancer Sutra">
-    <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?">
-    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png">
-    <meta name="twitter:site" content="@CancerSutra">
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="The Cancer Sutra"/>
+    <meta name="twitter:url" content="http://qa.cancersutra.com:8080"/>
+    <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
+    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
+    <meta name="twitter:site" content="@CancerSutra"/>
+    <meta name="twitter:creator" content="@CancerSutra"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
