twitter card QA

--- a/social/template.html
+++ b/social/template.html
@@ -10,19 +10,20 @@
 
     <link rel="canonical" href="http://qa.cancersutra.com:8080/positions/{{element-name}}" />
 
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
-    <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra"/>
-    <meta name="twitter:description" content="{{og:description}}"/>
-    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
-    <meta name="twitter:site" content="@CancerSutra"/>
-    <meta name="twitter:creator" content="@CancerSutra"/>
-
     <meta property="og:title" content="{{display-name}} | The Cancer Sutra"/>
     <meta property="og:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
     <meta property="og:site_name" content="The Cancer Sutra"/>
     <meta property="og:description" content="{{og:description}}"/>
     <meta property="og:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
+    <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra"/>
+    <meta name="twitter:description" content="{{og:description}}"/>
+    <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+    <meta name="twitter:site" content="@CancerSutra"/>
+    <meta name="twitter:creator" content="@CancerSutra"/>
+
 </head>
 <body>
     <h1>The Cancer Sutra</h1>
