--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="The Cancer Sutra"/>
     <meta name="twitter:url" content="http://qa.cancersutra.com:8080"/>
     <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
-    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
+    <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
     <meta name="twitter:site" content="@CancerSutra"/>
     <meta name="twitter:creator" content="@CancerSutra"/>
 
