--- a/social/template.html
+++ b/social/template.html
@@ -19,10 +19,11 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:url" content="http://qa.cancersutra.com:8080/positions/{{element-name}}"/>
     <meta name="twitter:title" content="{{display-name}} | The Cancer Sutra"/>
-    <meta name="twitter:description" content="{{og:description}}"/>
-    <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
-    <meta name="twitter:site" content="@CancerSutra"/>
-    <meta name="twitter:creator" content="@CancerSutra"/>
+    <meta name="twitter:description" content=""/>
+    <!--{{og:description}}-->
+    <meta name="twitter:image" content="http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}"/>
+    <meta name="twitter:site" content="@____connor"/>
+    <meta name="twitter:creator" content="@____connor"/>
 
 </head>
 <body>
