test tumblr share

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="twitter:url" content="http://qa.cancersutra.com:8080"/>
     <meta name="twitter:description" content="Introducing The Cancer Sutra. The first Kama Sutra designed not just for pleasure, but also for the business of checking your partner for cancer. Thirty-two positions across skin, breast, testicular, and prostate cancers; covering all partnerships — male/female, female/female, male/male. Because if you're not going to be so good at checking your own private bits, why not check someone else's?"/>
     <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png"/>
-    <meta name="twitter:site" content="@____connor"/>
-    <meta name="twitter:creator" content="@____connor"/>
+    <meta name="twitter:site" content="@CancerSutra"/>
+    <meta name="twitter:creator" content="@CancerSutra"/>
 
     <link rel="stylesheet" href="css/assets/animate.css"></style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
@@ -464,7 +464,7 @@
                                 <a target="_blank" href><img src="img/social/icons/email.png" /></a>
                                 <a target="_blank" href="http://www.facebook.com/share.php?u=http://qa.cancersutra.com:8080/positions/{{element-name}}&title=The Cancer Sutra: {{display-name}}"><img src="img/social/icons/facebook.png" /></a>
                                 <a target="_blank" href="http://twitter.com/share?url=http://qa.cancersutra.com:8080/positions/{{element-name}}&hashtags=CancerSutra"><img src="img/social/icons/twitter.png" /></a>
-                                <a target="_blank" href><img src="img/social/icons/tumblr.png" /></a>
+                                <a target="_blank" href="http://tumblr.com/share/photo/source=http://qa.cancersutra.com:8080/img/social/banners/{{banner-name}}&caption={{og:description}}"><img src="img/social/icons/tumblr.png" /></a>
                             </div>
                         </div>
                     </div>
