--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:image:src" content="http://qa.cancersutra.com:8080/img/social/banners/CS_Social_General.png" />
     <meta name="twitter:site" content="@CancerSutra" />
     <meta name="twitter:creator" content="@CancerSutra" />
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/assets/animate.css">
     </style>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -423,7 +424,7 @@
                         <a href><img src="img/support/ibooks-button.png" /></a>
                         <br>
                         <br>
-                        <a href><img src="img/support/kindle-button.png" /></a>
+                        <a href="http://www.amazon.com/Cancer-Sutra-ebook/dp/B00WNY34XQ/ref=sr_1_1?ie=UTF8&qid=1430141167&sr=8-1&keywords=the+cancer+sutra+kindle"><img src="img/support/kindle-button.png" /></a>
                         <br>
                         <br>
                         <a href><img src="img/support/nook-button.png" /></a>
@@ -474,7 +475,7 @@
             <br>
             <br>
         </p>
-        <p class="footer-links"><a href="#!/about">ABOUT </a> | <a href="#!/positions"> ALL POSITIONS </a> | <a href="#!/support"> SUPPORT THE CAUSE </a> | <a> CONTACT </a></p>
+        <p class="footer-links"><a href="#!/about">ABOUT </a> | <a href="#!/positions"> ALL POSITIONS </a> | <a href="#!/support"> SUPPORT THE CAUSE </a> | <a href="mailto:info@thecancerustra.com"> CONTACT </a></p>
         <p>Copyright © 2015 The Cancer Sutra. All rights reserved.
             <br>
             <br>
